# cadbase

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/cad-base/: arcball.hpp  camera.hpp  geometry.hpp  geometry_list.hpp  level_gen.hpp  level_geo.hpp  navicube.hpp  renderable.hpp  scene_data.hpp  shader.hpp  textured_renderable.hpp  viewport.hpp  viewport_grid.hpp  viewport_input.hpp
include/cad-base/geometry/: aa_bounding_box.hpp  geometry.hpp  viewport_grid.hpp
include/cad-base/gui/: gui_base.hpp  gui_data.hpp  gui_logger.hpp  gui_main.hpp  gui_project.hpp  gui_render_window.hpp  gui_settings.hpp
include/cad-base/gui/rendered_textures/: gui_render_texture.hpp  navicube.hpp  viewport.hpp
include/cad_data/: feature.hpp  part.hpp  scene_data.hpp
include/cad_gui/: scene_data.hpp
include/cad_gui/imgui/: app_style.hpp  gui_data.hpp
include/cad_gui/imgui/imgui_windows/: log_window.hpp  main_window.hpp  project_window.hpp
include/cad_gui/imgui/imgui_windows/viewport_window/: gui_render_texture.hpp  navicube.hpp  viewport.hpp  viewport_input.hpp  viewport_window.hpp
include/cad_gui/imgui/imgui_windows/viewport_window/rendered_textures/: gui_render_texture.hpp  navicube.hpp  viewport.hpp
include/cad_gui/opengl/: arcball.hpp  camera.hpp  renderer.hpp  shader.hpp
include/cad_gui/opengl/raycast/: ray.hpp
include/cad_gui/opengl/render_data_types/geometry/: aa_bounding_box.hpp  geometry.hpp  viewport_grid.hpp
include/cad_gui/opengl/render_data_types/renderable/: renderable.hpp  textured_renderable.hpp
include/cad_gui/opengl/renderables/: aa_bounding_box.hpp  renderable.hpp  textured_renderable.hpp  viewport_grid.hpp
resources/navicube/: Arrow.xcf  arrow_neg_rotate.tga  arrow_plus_rotate.tga  back.tga  back.xcf  bottom.tga  front.tga  left.tga  right.tga  top.tga
src/: arcball.cpp  camera.cpp  geometry.cpp  main.cpp  navicube.cpp  renderable.cpp  shader.cpp  textured_renderable.cpp  viewport.cpp  viewport_grid.cpp
src/cad_data/: feature.cpp
src/cad_gui/imgui/imgui_windows/: log_window.cpp  main_window.cpp  project_window.cpp
src/cad_gui/imgui/imgui_windows/viewport_window/: viewport_window.cpp
src/cad_gui/imgui/imgui_windows/viewport_window/rendered_textures/: gui_render_texture.cpp  navicube.cpp  viewport.cpp
src/cad_gui/opengl/: arcball.cpp  camera.cpp  renderer.cpp  shader.cpp
src/cad_gui/opengl/render-data-types/geometry/: viewport_grid.cpp
src/cad_gui/opengl/render-data-types/renderables/: renderable.cpp  textured_renderable.cpp
src/cad_gui/opengl/renderables/: renderable.cpp  textured_renderable.cpp  viewport_grid.cpp
src/cad_gui/opengl/shaders/: basic.fragshader  basic.vertshader  basic_colour.vertshader
src/geometry/: geometry.cpp  viewport_grid.cpp
src/gui/: gui_base.cpp  gui_logger.cpp  gui_main.cpp  gui_project.cpp  gui_render_window.cpp  gui_settings.cpp
src/gui/rendered_textures/: gui_render_texture.cpp  navicube.cpp  viewport.cpp
src/imgui/imgui_windows/: log_window.cpp  main_window.cpp  project_window.cpp
src/imgui/imgui_windows/viewport_window/: viewport_window.cpp
src/imgui/imgui_windows/viewport_window/rendered_textures/: gui_render_texture.cpp  navicube.cpp  viewport.cpp
src/opengl/: arcball.cpp  camera.cpp  shader.cpp
src/opengl/render-data-types/geometry/: geometry.cpp  viewport_grid.cpp
src/opengl/render-data-types/renderables/: renderable.cpp  textured_renderable.cpp
src/shaders/: basic_camera.fragshader  basic_textured.fragshader  basic_textured.vertshader
